switch to emails

--- a/static/index.html
+++ b/static/index.html
@@ -55,14 +55,14 @@
             <i class="file icon"></i>
             <div class="content">
               <div class="header">otp.html</div>
-              <div class="description">Verify user's phone</div>
+              <div class="description">Verify email account</div>
             </div>
           </a>
           <a class="item" href="/login">
             <i class="file icon"></i>
             <div class="content">
               <div class="header">login.html</div>
-              <div class="description">Login with a phone number or a refresh token</div>
+              <div class="description">Login with an email or a refresh token</div>
             </div>
           </a>
         </div>
