--- a/static/username.html
+++ b/static/username.html
@@ -36,6 +36,9 @@
         <p>
           <a href="/">← Back to index</a>
         </p>
+        <p>
+          <a href="/register">→ Go to register user</a>
+        </p>
       </div>
     </div>
   </body>
