--- a/static/otp.html
+++ b/static/otp.html
@@ -20,7 +20,7 @@
   <body class="holder">
     <div class="ui raised text container">
       <div class="column">
-        <h1 class="ui header">Verify phone number</h1>
+        <h1 class="ui header">Verify email</h1>
         <div class="ui compact message hidden" id="message">
           <p>
             Message goes here...
